[workspace]
resolver = "2"
members = ["crates/*", "programs/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anchor-client = "0.30.1"
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", default-features = false }
anchor-syn = "0.30.1"
base64 = "0.22.0"
bitmaps = "3.2.1"
bytemuck = "1.15.0"
byteorder = "1.5.0"
chainlink_solana = "1.0.0"
clap = "4.5.0"
eventsource-stream = "0.2.3"
eyre = "0.6.12"
futures-util = "0.3.30"
heck = "0.5.0"
hex = "0.4.3"
indexmap = "2.2.6"
num-traits = "0.2.18"
num_enum = "0.7.2"
paste = "1.0.15"
poem = "3.0.1"
pyth-sdk = "0.8.0"
pyth-sdk-solana = "0.10.1"
pythnet-sdk = "2.1.0"
rand = "0.8.5"
reqwest = "0.12.4"
ruint = { version = "1.12.1", default-features = false }
rust-embed = "8.4.0"
rust_decimal = { version = "1.34", default-features = false }
serde = "1.0.203"
serde_json = "1.0.117"
serde_with = "3.8.1"
shellexpand = "3.1.0"
spl-governance = "4.0.0"
static_assertions = "1.1.0"
strum = "0.26.2"
thiserror = "1.0.58"
tokio = "1.37.0"
toml = "0.8.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
typed-builder = "0.18.2"
url = "2.5.0"

[workspace.dependencies.gmsol-model]
path = "crates/gmsol-model"

[workspace.dependencies.dual-vec-map]
path = "crates/dual-vec-map"

[workspace.dependencies.gmsol-utils]
path = "crates/gmsol-utils"

[workspace.dependencies.gmsol-store]
path = "programs/gmsol-store"

[workspace.dependencies.gmsol-exchange]
path = "programs/gmsol-exchange"

# FIXME: use the crates.io version when it can compile with `anchor v0.30`.
# See https://github.com/pyth-network/pyth-crosschain/issues/1522 for more information.
[workspace.dependencies.pyth-solana-receiver-sdk]
version = "0.2.0"
git = "https://github.com/pyth-network/pyth-crosschain"
tag = "pyth-solana-receiver-sdk-v0.2.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
