[workspace]
resolver = "2"
members = ["crates/*", "programs/*"]

[workspace.package]
version = "0.3.0"
edition = "2021"

[workspace.dependencies]
anchor-client = "0.30.1"
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", default-features = false }
anchor-syn = "0.30.1"
async-stream = "0.3.5"
async-tungstenite = { version = "0.28.1", default-features = false }
base64 = "0.22.1"
bitmaps = "3.2.1"
borsh = "0.10.4"
bs58 = "0.5.1"
bytemuck = "1.19.0"
byteorder = "1.5.0"
bytes = "1.8.0"
cfg-if = "1.0.0"
chainlink_solana = "1.0.0"
clap = "4.5.20"
derive_more = "1.0.0"
dialoguer = "0.11.0"
dyn-clone = "1.0.18"
either = "1.13.0"
event-listener = "5.3.1"
eventsource-stream = "0.2.3"
eyre = "0.6.12"
futures-util = "0.3.30"
heck = "0.5.0"
hex = "0.4.3"
hmac = "0.12.1"
indexmap = "2.6.0"
num-bigint = "0.4.6"
num-traits = "0.2.18"
num_enum = "0.7.3"
paste = "1.0.15"
pin-project-lite = "0.2.15"
poem = "3.1.3"
prettytable = "0.10.0"
pyth-sdk = "0.8.0"
pyth-sdk-solana = "0.10.1"
pyth-solana-receiver-sdk = "0.3.2"
pythnet-sdk = "2.3.1"
rand = "0.7.3"
reqwest = "0.12.1"
reqwest-websocket = "0.4.3"
ruint = { version = "1.12.1", default-features = false }
rust-embed = "8.4.0"
rust_decimal = { version = "1.34", default-features = false }
rust_decimal_macros = { version = "1.34" }
serde = "1.0.214"
serde_bytes = "0.11.15"
serde_json = "1.0.132"
serde_with = "3.11.0"
sha2 = "0.10.8"
shellexpand = "3.1.0"
snap = "1.1.1"
solana-account-decoder = "1.18.26"
solana-client = "1.18.26"
solana-remote-wallet = "1.18.26"
solana-sdk = "1.18.26"
solana-transaction-status = "1.18.26"
spl-associated-token-account = "3.0.0"
spl-governance = "4.0.0"
spl-token = "4.0.0"
squads-multisig = "2.0.1"
static_assertions = "1.1.0"
strum = "0.26.2"
switchboard-on-demand = { version = "0.2.2", features = ["anchor"] }
switchboard-on-demand-client = { version = "0.2.9", features = [] }
thiserror = "1.0.67"
tokio = "1.41.0"
tokio-stream = "0.1.15"
toml = "0.8.19"
tower = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
typed-builder = "0.20.0"
url = "2.5.3"
humantime = "2.1.0"
num-format = "0.4.4"
time = "0.3.36"

[workspace.dependencies.gmsol-model]
path = "crates/gmsol-model"

[workspace.dependencies.gmsol-utils]
path = "crates/gmsol-utils"

[workspace.dependencies.gmsol-store]
path = "programs/gmsol-store"

[workspace.dependencies.gmsol-treasury]
path = "programs/gmsol-treasury"

[workspace.dependencies.gmsol-timelock]
path = "programs/gmsol-timelock"

[workspace.dependencies.mock-chainlink-verifier]
path = "programs/mock-chainlink-verifier"

[workspace.dependencies.gmsol-decode]
path = "crates/gmsol-decode"

[workspace.dependencies.chainlink-datastreams]
path = "crates/chainlink-datastreams"

[workspace.dependencies.data-streams-report]
git = "https://github.com/smartcontractkit/data-streams-sdk.git"

[workspace.dependencies.gmsol-solana-utils]
path = "crates/solana-utils"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
