[package]
name = "gmsol-examples"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

# If you copy one of the examples into a new project, you should be using
# [dependencies] instead.
[dev-dependencies]
gmsol-sdk = { workspace = true, features = [
    # The `client` feature is required for using the Client-API.
    "client",
    # The `devnet` feature is enabled to facilitate running examples in the devnet
    # environment. You can disable it if your target environment is mainnet.
    "devnet",
    # The `pyth` feature is enabled to make it easier to fetch prices.
    # You may omit it if you're using an alternative price source.
    "pyth",
    # The `decode` feature is enabled to add support for `gmsol-decode`.
    "decode",
] }

anchor-spl = { workspace = true }
tokio = { workspace = true, features = ["full"] }
shellexpand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
futures-util = { workspace = true }

[[example]]
name = "market"
path = "market.rs"

[[example]]
name = "decode-transaction"
path = "decode_transaction.rs"

