[package]
name = "gmsol-tests"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[features]
anchor-test = []

[dev-dependencies]
gmsol-sdk = { workspace = true, features = [
    "client",
    "chainlink",
    "pyth",
    "decode",
] }
gmsol-programs = { workspace = true, features = [
    "model",
    "utils",
    "gmsol-utils",
] }
gmsol-utils = { workspace = true, features = ["enum-iter", "debug"] }
gmsol-solana-utils = { workspace = true }
gmsol-mock-chainlink-verifier = { workspace = true, features = [
    "no-entrypoint",
] }
gmsol-store = { workspace = true }
gmsol-callback = { workspace = true, features = ["no-entrypoint", "debug"] }
gmsol-competition = { workspace = true, features = ["no-entrypoint", "debug"] }
gmsol-chainlink-datastreams = { workspace = true }
gmsol-liquidity-provider = { workspace = true, features = ["no-entrypoint", "debug"] }

tokio = { workspace = true, features = ["full"] }
rand = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
anchor-spl = { workspace = true, default-features = false, features = [
    "token",
    "token_2022",
    "associated_token",
    "metadata",
] }
rust_decimal_macros = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde_json = { workspace = true }
event-listener = { workspace = true }
shellexpand = { workspace = true }
eyre = { workspace = true }
futures-util = { workspace = true }
time = { workspace = true }

[[test]]
name = "anchor"
path = "anchor.rs"
