[package]
name = "chainlink-datastreams"
version.workspace = true
edition.workspace = true

[features]
mock = []

[dependencies]
ruint = { workspace = true, default-features = false }
hex = { workspace = true }
mock-chainlink-verifier = { workspace = true, features = ["cpi"] }
anchor-lang = { workspace = true }
thiserror = { workspace = true }
snap = { workspace = true }
data-streams-report = { workspace = true }
num-bigint = { workspace = true }
