[package]
name = "gmsol-chainlink-datastreams"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
documentation = "https://docs.rs/gmsol-chainlink-datastreams"
readme.workspace = true

[features]
mock = []

[dependencies]
ruint = { workspace = true, default-features = false }
hex = { workspace = true }
gmsol-mock-chainlink-verifier = { workspace = true, features = ["cpi"] }
anchor-lang = { workspace = true }
thiserror = { workspace = true }
snap = { workspace = true }
data-streams-report = { workspace = true }
num-bigint = { workspace = true }
