[package]
name = "gmsol-decode"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description.workspace = true
repository.workspace = true
documentation = "https://docs.rs/gmsol-decode"
readme.workspace = true
keywords.workspace = true

[features]
default = []
gmsol-programs = ["dep:gmsol-programs"]
solana-decoder = ["bs58"]

[dependencies]
gmsol-programs = { workspace = true, optional = true }

tracing = { workspace = true }
thiserror = { workspace = true }
anchor-lang = { workspace = true }
solana-sdk = { workspace = true }
base64 = { workspace = true }
bytemuck = { workspace = true }
paste = { workspace = true }
cfg-if = { workspace = true }
solana-transaction-status-client-types = { workspace = true }

bs58 = { workspace = true, optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
