[package]
name = "gmsol-decode"
version.workspace = true
edition.workspace = true

[features]
default = []
tracing = ["dep:tracing"]
gmsol = ["gmsol-store/debug", "gmsol-store/display"]

[dependencies]
tracing = { workspace = true, optional = true }
thiserror = { workspace = true }
anchor-lang = { workspace = true }
solana-sdk = { workspace = true }
base64 = { workspace = true }
bytemuck = { workspace = true }
paste = { workspace = true }
gmsol-store = { workspace = true, optional = true }
