[package]
name = "gmsol-decode"
version.workspace = true
edition.workspace = true

[features]
default = []
gmsol = ["gmsol-store/debug", "gmsol-store/display"]
solana-decoder = ["solana-transaction-status", "bs58"]

[dependencies]
tracing = { workspace = true }
thiserror = { workspace = true }
anchor-lang = { workspace = true }
solana-sdk = { workspace = true }
base64 = { workspace = true }
bytemuck = { workspace = true }
paste = { workspace = true }
gmsol-store = { workspace = true, optional = true }
solana-transaction-status = { workspace = true, optional = true }
bs58 = { workspace = true, optional = true }
