[package]
name = "gmsol-model"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
documentation = "https://docs.rs/gmsol-model"
readme.workspace = true

[features]
test = []
u128 = ["ruint"]
solana = ["anchor-lang", "borsh", "gmsol-utils"]
strum = ["dep:strum"]
serde = ["dep:serde"]

[dependencies]
num-traits = { workspace = true }
thiserror = { workspace = true }
ruint = { workspace = true, optional = true, default-features = false }
rust_decimal = { workspace = true, default-features = false, features = [
    "maths",
] }
anchor-lang = { workspace = true, optional = true }
num_enum = { workspace = true }
typed-builder = { workspace = true }
strum = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
borsh = { workspace = true, optional = true }

gmsol-utils = { workspace = true, optional = true }

[dev-dependencies]
gmsol-model = { path = ".", features = ["test", "u128"] }
