[package]
name = "gmsol-utils"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description.workspace = true
repository.workspace = true
documentation = "https://docs.rs/gmsol-utils"
readme.workspace = true
keywords.workspace = true

[features]
debug = []
serde = ["dep:serde"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
thiserror = { workspace = true }
paste = { workspace = true }
bytemuck = { workspace = true }
static_assertions = { workspace = true }
ruint = { workspace = true, default-features = false }
bitmaps = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }

[dev-dependencies]
num_enum = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
