[package]
name = "gmsol"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gmsol"
path = "src/cli/main.rs"
required-features = ["cli"]

[[example]]
name = "hermes"
required-features = ["pyth-pull-oracle", "cli"]

[[example]]
name = "discover"
required-features = ["discover", "cli"]

[features]
cli = [
    "pyth-pull-oracle",
    "tokio/full",
    "clap",
    "tracing-subscriber",
    "shellexpand",
    "anchor-syn",
    "heck",
    "toml",
    "serde_with",
    "humantime",
    "num-format",
    "prettytable",
]
ui = ["cli", "poem/embed", "rust-embed"]
clap = ["dep:clap", "gmsol-store/clap"]
devnet = ["gmsol-store/devnet", "gmsol-exchange/devnet"]
pyth-pull-oracle = [
    "reqwest/stream",
    "url",
    "eventsource-stream",
    "pythnet-sdk",
    "pyth-solana-receiver-sdk",
    "byteorder",
]
rust-embed = ["dep:rust-embed"]
poem = ["dep:poem"]
doc = ["gmsol-store/doc", "cli"]
discover = [
    "tower/discover",
    "tokio/sync",
    "tokio/time",
    "tokio-stream/sync",
    "pin-project-lite",
]

[dependencies]
gmsol-utils = { workspace = true }
gmsol-store = { workspace = true, features = [
    "no-entrypoint",
    "debug",
    "display",
    "utils",
    "serde",
    "enum-iter",
] }
gmsol-exchange = { workspace = true, features = ["no-entrypoint", "debug"] }
gmsol-model = { workspace = true, features = ["strum", "serde"] }

rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
hex = { workspace = true }
pyth-sdk = { workspace = true }
typed-builder = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
anchor-client = { workspace = true, features = ["async"] }
anchor-spl = { workspace = true, default-features = false, features = [
    "token",
    "token_2022",
    "associated_token",
] }
bytemuck = { workspace = true }
rand = { workspace = true }
futures-util = { workspace = true }
spl-governance = { workspace = true, features = ["no-entrypoint"] }
strum = { workspace = true }
rust-embed = { workspace = true, optional = true }
poem = { workspace = true, optional = true }
indexmap = { workspace = true, features = ["serde"] }
time = { workspace = true }
solana-account-decoder = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Dependencies for cli
clap = { workspace = true, optional = true, features = ["derive", "env"] }
tracing-subscriber = { workspace = true, optional = true, features = [
    "env-filter",
] }
shellexpand = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true, features = ["indexmap_2"] }
humantime = { workspace = true, optional = true }
num-format = { workspace = true, optional = true }
prettytable = { workspace = true, optional = true }

# Dependencies for pyth support
reqwest = { workspace = true, optional = true, features = ["json"] }
url = { workspace = true, optional = true }
eventsource-stream = { workspace = true, optional = true }
pythnet-sdk = { workspace = true, optional = true }
pyth-solana-receiver-sdk = { workspace = true, optional = true }
anchor-syn = { workspace = true, optional = true }
heck = { workspace = true, optional = true }
byteorder = { workspace = true, optional = true }

# Dependencies for `discorver` feature
tower = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
pin-project-lite = { workspace = true, optional = true }
