[package]
name = "gmsol"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description.workspace = true
repository.workspace = true
documentation = "https://docs.rs/gmsol"
readme.workspace = true
keywords.workspace = true

[[bin]]
name = "gmsol"
path = "src/cli/main.rs"
required-features = ["cli"]

[[example]]
name = "hermes"
required-features = ["pyth-pull-oracle", "cli"]

[[example]]
name = "discover"
required-features = ["discover", "cli"]

[[example]]
name = "trade_event"
required-features = ["decode"]

[[example]]
name = "chainlink"
required-features = ["chainlink-pull-oracle", "cli"]

[[example]]
name = "squads_trader"
required-features = ["cli", "squads"]

[features]
cli = [
    "chainlink-pull-oracle",
    "pyth-pull-oracle",
    "switchboard-pull-oracle",
    "tokio/full",
    "clap",
    "tracing-subscriber",
    "shellexpand",
    "anchor-syn",
    "heck",
    "toml",
    "serde_with",
    "humantime",
    "num-format",
    "prettytable",
    "decode",
    "mock",
    "solana-remote-wallet",
    "dialoguer",
]

clap = ["dep:clap", "gmsol-store/clap"]
chainlink-pull-oracle = [
    "reqwest",
    "sha2",
    "hmac",
    "reqwest-websocket",
    "gmsol-chainlink-datastreams",
    "async-tungstenite",
]
pyth-pull-oracle = [
    "reqwest/stream",
    "eventsource-stream",
    "pythnet-sdk",
    "pyth-solana-receiver-sdk",
    "byteorder",
]
switchboard-pull-oracle = ["switchboard-on-demand-client"]
rust-embed = ["dep:rust-embed"]
poem = ["dep:poem"]
doc = ["gmsol-store/doc", "cli"]
discover = ["tower/discover", "tokio/time", "pin-project-lite"]
decode = ["gmsol-decode"]

anchor-test = [
    "chainlink-pull-oracle",
    "pyth-pull-oracle",
    "tracing-subscriber",
    "shellexpand",
]

integration-test = [
    "cli",
    "chainlink-pull-oracle",
    "pyth-pull-oracle",
    "switchboard-pull-oracle",
    "tracing-subscriber",
    "figment",
]

mock = ["gmsol-mock-chainlink-verifier"]

devnet = [
    "gmsol-store/devnet",
    "gmsol-timelock/devnet",
    "gmsol-treasury/devnet",
    "switchboard-on-demand-client?/devnet",
]

squads = []
migration = []

[dependencies]
gmsol-solana-utils = { workspace = true, features = [
    "anchor",
    "serde",
    "client",
] }
gmsol-utils = { workspace = true }
gmsol-store = { workspace = true, features = [
    "no-entrypoint",
    "debug",
    "display",
    "utils",
    "serde",
    "enum-iter",
] }
gmsol-treasury = { workspace = true, features = [
    "no-entrypoint",
    "debug",
    "enum-iter",
    "utils",
] }
gmsol-timelock = { workspace = true, features = [
    "no-entrypoint",
    "debug",
    "utils",
] }
gmsol-model = { workspace = true, features = ["strum", "serde"] }
gmsol-decode = { workspace = true, optional = true, features = [
    "gmsol",
    "solana-decoder",
] }

rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
hex = { workspace = true }
pyth-sdk = { workspace = true }
typed-builder = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
thiserror = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
anchor-lang = { workspace = true }
borsh = { workspace = true }
anchor-client = { workspace = true, features = ["async"] }
anchor-spl = { workspace = true, default-features = false, features = [
    "token",
    "token_2022",
    "associated_token",
] }
bytemuck = { workspace = true }
rand = { workspace = true }
futures-util = { workspace = true }
# spl-governance = { workspace = true, features = ["no-entrypoint"] }
strum = { workspace = true }
rust-embed = { workspace = true, optional = true }
poem = { workspace = true, optional = true }
indexmap = { workspace = true, features = ["serde"] }
time = { workspace = true }
solana-sdk = { workspace = true }
solana-account-decoder = { workspace = true }
solana-transaction-status = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio-stream = { workspace = true, features = ["sync", "time"] }
bs58 = { workspace = true }
async-stream = { workspace = true }
either = { workspace = true }
url = { workspace = true }
spl-token = { workspace = true }
cfg-if = { workspace = true }

# Dependencies for cli
clap = { workspace = true, optional = true, features = ["derive", "env"] }
tracing-subscriber = { workspace = true, optional = true, features = [
    "env-filter",
] }
shellexpand = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true, features = ["indexmap_2"] }
humantime = { workspace = true, optional = true }
num-format = { workspace = true, optional = true }
prettytable = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true, features = ["json"] }
reqwest-websocket = { workspace = true, optional = true }
# Manually enable the `futures-03-sink` feature to prevent compile errors.
async-tungstenite = { workspace = true, optional = true, features = [
    "futures-03-sink",
] }
solana-remote-wallet = { workspace = true, optional = true }
dialoguer = { workspace = true, optional = true }
figment = { workspace = true, optional = true, features = ["env", "toml"] }

# Chainlink.
sha2 = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
gmsol-chainlink-datastreams = { workspace = true, optional = true }

# Mock
gmsol-mock-chainlink-verifier = { workspace = true, optional = true }

# Dependencies for pyth support
eventsource-stream = { workspace = true, optional = true }
pythnet-sdk = { workspace = true, optional = true }
pyth-solana-receiver-sdk = { workspace = true, optional = true }
anchor-syn = { workspace = true, optional = true }
heck = { workspace = true, optional = true }
byteorder = { workspace = true, optional = true }

# Dependencies for `discover` feature
tower = { workspace = true, optional = true }
pin-project-lite = { workspace = true, optional = true }

# Dependencies for switchboard support
switchboard-on-demand-client = { workspace = true, optional = true }

# Dependencies for squads-multisig
# squads-multisig = { workspace = true, optional = true }

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"] }
event-listener = { workspace = true }
spl-associated-token-account = { workspace = true }
shellexpand = { workspace = true }
gmsol-mock-chainlink-verifier = { workspace = true }
figment = { workspace = true, features = ["env", "toml"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
