[package]
name = "gmsol-programs"
documentation = "https://docs.rs/gmsol-programs"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[features]
default = ["store"]
store = []
treasury = []
timelock = []
model = ["gmsol-model", "bitmaps", "time"]
wasm-bindgen = ["time?/wasm-bindgen"]

[dependencies]
gmsol-model = { workspace = true, optional = true, features = ["u128"] }
gmsol-utils = { workspace = true, optional = true }

anchor-lang = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true, features = [
    "min_const_generics",
    "align_offset",
] }
bitmaps = { workspace = true, optional = true }
time = { workspace = true, optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
